[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/LevelOne.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Points.gd" type="Script" id=4]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://scripts/Record.gd" type="Script" id=6]
[ext_resource path="res://scenes/EnemyTwo.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/EnemyThree.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/PowerUp.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/PowerUpDamage.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/Lives.png" type="Texture" id=11]
[ext_resource path="res://scripts/Controls.gd" type="Script" id=12]
[ext_resource path="res://assets/images/damage-bg.png" type="Texture" id=13]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.5
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="LevelOne" type="Node2D"]
script = ExtResource( 2 )
enemies = [ ExtResource( 7 ), ExtResource( 8 ) ]
powers = [ ExtResource( 9 ), ExtResource( 10 ) ]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 180 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="timer_spawn_enemy" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="timer_increase_difficulty" type="Timer" parent="."]
autostart = true

[node name="timer_spawn_powerup" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ui" type="Node2D" parent="."]
z_index = 3

[node name="controls" type="Control" parent="ui"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 12 )

[node name="points" type="Label" parent="ui/controls"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="record" type="Label" parent="ui/controls"]
margin_top = 280.0
margin_right = 640.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="lives" type="TextureRect" parent="ui/controls"]
modulate = Color( 0.101961, 0.419608, 0.823529, 1 )
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="damage_player" type="TextureRect" parent="ui/controls"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
current = true
script = ExtResource( 5 )

[node name="timer_camera" type="Timer" parent="camera"]

[connection signal="timeout" from="timer_spawn_enemy" to="." method="_on_timer_spawn_enemy_timeout"]
[connection signal="timeout" from="timer_increase_difficulty" to="." method="_on_timer_increase_difficulty_timeout"]
[connection signal="timeout" from="timer_spawn_powerup" to="." method="_on_timer_spawn_powerup_timeout"]
[connection signal="timeout" from="camera/timer_camera" to="camera" method="_on_timer_camera_timeout"]
